--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,16 @@
     padding: 0;
     box-sizing: border-box;
     border: none;
+    
 }
 
 body{
     width: 100vw;
     height: 100vh;
-    background: linear-gradient(to bottom, rgb(28, 33, 49) 11.4%, rgb(53, 63, 97) 70.2%);
+    /* background: linear-gradient(to right, rgb(28, 33, 49) 11.4%, rgb(53, 63, 97) 70.2%); */
+    background-color:rgba(53, 63, 97, 100%) ;
+    background-size: cover;
+    overflow-x: hidden;
 }
 .container{
     width: 100vw;
