--- a/src/components/Screen.css
+++ b/src/components/Screen.css
@@ -1,13 +1,47 @@
+
 .container-details{
     margin-top:20px;
     background-color: rgba(255, 255, 255, 0.8);
     border-radius: 10px;
     padding:20px;
     width: 60vw;
+  
+}
+.container-details2{
+    margin-top:20px;
+    background-color: rgba(255, 255, 255, 0.8);
+    border-radius: 10px;
+    padding:20px;
+    width: 60vw;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    margin-bottom: 20px;
+    
+  
+}
+.box{
+    background-color: white;
+    margin-right: 10px;
+    margin: 0 auto;
+    padding: 10px;
+    margin: 5px;
+    border-radius: 5px;
+    box-shadow:  2px 2px 4px rgba(0, 0, 0, 0.356);
+    text-transform: capitalize;
+    border: 1px solid black;
+}
+h3{
+    text-align: center;
+    margin-bottom: 20px;
+}
+.fiveDays{
+    display: flex;
 }
 .container-details > h2{
-    font-size: 2rem;
+    font-size: 1.4rem;
     text-align: center;
+    
 }   
 .details{
     display: flex;
